# testsuite

./: README.md  pyproject.toml  run_all_tests.py
driver/: driver.py  drivers.py  esen_driver.py  gpaw_driver.py  mace_driver.py  mattersim_driver.py  nequip_driver.py  nequix_driver.py  orb_driver.py  painn_driver.py  schnet_driver.py  sevennet_driver.py  uma_driver.py
plotting/: model_colors.py  plot_co2_stability.py  plot_diatomic.py  plot_diatomic_dst.py  plot_inference.py  plot_phonons.py  plot_thermals.py  plot_widom.py
plotting/figures/phonon_plots/: band_structure_eSEN_oam.json  band_structure_mattersim_v1.json  band_structure_nequip_default.json  band_structure_nequix_default.json  band_structure_orb_v2_direct_mptrj-only.json  band_structure_orb_v3_conservative_inf_omat.json  band_structure_orb_v3_direct_inf_omat.json  band_structure_painn_oc20.json  band_structure_sevennet_7net-mf-ompa.json  band_structure_uma_m-1p1_omat.json
tests/: MgMOF74.cif  co2_stability.py  dataset-distance-test.py  diatomic_energy_curve.py  energydrift.py  inference_times.py  mof_widom.py  phonon_bandstructure.py  phonopy_params.yaml  relaxation_tests.py  rotational_effects.py  test_rotation_effects.py  tests.py
